[tool.poetry]
name = "python-asyncio"
version = "0.1.0"
description = ""
authors = ["Bo Lu <bo@plenoinc.com>"]
readme = "README.md"
packages = [{include = "python_asyncio"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"